--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,26 @@
     "name": "rubricate/validator",
     "authors": [
         {
-            "name": "Estefanio NS",
-            "email": "estefanions@gmail.com"
+            "name"  : "Estefanio N Santos",
+            "email" : "estefanions@gmail.com"
         }
     ],
+    "keywords": [
+        "rubricateframework",
+        "rubricatephp",
+        "validator"
+    ],
+    "support": {
+        "docs"   : "https://rubricate.github.io/components/validator",
+        "source" : "https://github.com/rubricate/validator"
+    },
+    "require": {
+        "php": "^7.1"
+    },
     "autoload": {
         "psr-4": {
             "Rubricate\\Validator\\": "Rubricate/Validator/"
         }
     }
 }
+
