COMPOSER - Licence MIT

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "rubricate/validator",
+    "license": "MIT",
     "authors": [
         {
             "name"  : "Estefanio N Santos",
